[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites && Escenas/backgroudn.png" type="Texture" id=1]
[ext_resource path="res://Fuentes/fuente2.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Player/SpriteSheet.png" type="Texture" id=3]
[ext_resource path="res://Niveles/DeathScene.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 3
outline_color = Color( 0.752941, 0.32549, 0.466667, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 43
font_data = ExtResource( 2 )

[node name="Death" type="Node2D"]
script = ExtResource( 4 )

[node name="Backgroudn" type="Sprite" parent="."]
position = Vector2( 515.5, 386 )
scale = Vector2( 0.535937, 0.72037 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1027.0
margin_bottom = 768.0

[node name="death" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -353.5
margin_right = 354.5
margin_bottom = 308.0
custom_fonts/font = SubResource( 1 )
text = "DEATH!!"
align = 1
valign = 1

[node name="Restart" type="Button" parent="Control"]
pause_mode = 2
use_parent_material = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -170.5
margin_top = -368.0
margin_right = 177.0
margin_bottom = -318.0
custom_colors/font_color_hover = Color( 0.760784, 0.0470588, 0.415686, 1 )
custom_fonts/font = SubResource( 2 )
text = "RESTART"
flat = true

[node name="MainMenu" type="Button" parent="Control"]
pause_mode = 2
use_parent_material = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -171.5
margin_top = -294.0
margin_right = 176.0
margin_bottom = -244.0
custom_colors/font_color_hover = Color( 0.760784, 0.0470588, 0.415686, 1 )
custom_fonts/font = SubResource( 2 )
text = "MAIN MENU"
flat = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 508, 249 )
scale = Vector2( 2.40441, 2.52206 )
texture = ExtResource( 3 )
hframes = 4
vframes = 4
frame = 2

[connection signal="pressed" from="Control/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/MainMenu" to="." method="_on_MainMenu_pressed"]
